fix: top right buttons should now be visible on Windows

--- a/obsidian.css
+++ b/obsidian.css
@@ -1743,6 +1743,7 @@ body:not(.is-mobile) .workspace-leaf.mod-active .view-header-title {
 
 .titlebar-text {
   font-family: var(--not-editor);
+  visibility: hidden;
 }
 
 /* box shadow adjusted from yin yang */
@@ -1797,6 +1798,22 @@ body:not(.plugin-sliding-panes-rotate-header):not(.is-mobile) .view-actions .vie
   font-family: var(--not-editor);
   font-weight: 400;
   padding: 0 20px 0 16px;
+}
+
+/* Fix for Windows 10 missing close, minimize, maximize */
+.titlebar-inner {
+  color: var(--text-faint);
+}
+
+.titlebar-button-container.mod-left {
+  visibility: hidden;
+}
+
+.titlebar-button.mod-minimize:hover,
+.titlebar-button.mod-maximize:hover,
+.titlebar-button.mod-close:hover {
+  background-color: var(--background-primary);
+  color: var(--text-normal);
 }
 
 /* ==63 CALENDAR!== */
@@ -1953,7 +1970,6 @@ Can do
   color: var(--internal-buttons);
 }
 
-/* ==KEPANO'S HIDER */
 /* Hide ribbon */
 .workspace-ribbon.mod-left {
   display: none;
@@ -1979,21 +1995,7 @@ Can do
   background-color: var(--background-primary);
 }
 
-/* Frameless */
-.titlebar-button-container {
-  display: none;
-  background-color: var(--background-primary);
-}
-
-.titlebar,
-.titlebar-inner {
-  position: fixed;
-  top: 0;
-  height: 12px;
-  background: transparent;
-  color: transparent;
-}
-
+/* Hides titlebar close, minimize, etc. on Windows */
 .workspace-split.mod-right-split > .workspace-tabs {
   padding: 18px 0 8px 8px;
 }
